--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.groceryListEntry.GroceryListEntriesActivity" />
+        <activity android:name=".ui.groceryList.CreateGroceryListActivity" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
