--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme"
         android:networkSecurityConfig="@xml/network_security_config">
         <activity
-            android:name="com.groceries.ui.LoginActivity"
+            android:name="com.groceries.ui.basic.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,6 +31,7 @@
         <activity android:name=".ui.groceryListEntry.GroceryListEntriesActivity" />
         <activity android:name=".ui.groceryList.CreateGroceryListActivity" />
         <activity android:name=".ui.groceryListEntry.CreateGroceryListEntryActivity" />
+        <activity android:name=".ui.basic.RegistrationActivity" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
