--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme"
         android:networkSecurityConfig="@xml/network_security_config">
         <activity
-            android:name="com.groceries.ui.basic.LoginActivity"
+            android:name="com.groceries.ui.activity.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.groceries.ui.groceryList.GroceryListsActivity"
+            android:name="com.groceries.ui.activity.GroceriesActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,10 +29,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.groceryListEntry.GroceryListEntriesActivity" />
-        <activity android:name=".ui.groceryList.CreateGroceryListActivity" />
-        <activity android:name=".ui.groceryListEntry.CreateGroceryListEntryActivity" />
-        <activity android:name=".ui.basic.RegistrationActivity" />
-        <activity android:name=".ui.invitation.InvitationsActivity" />
+        <activity android:name=".ui.activity.CreateGroceryListActivity" />
+        <activity android:name=".ui.activity.CreateGroceryListEntryActivity" />
+        <activity android:name=".ui.activity.RegistrationActivity" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
