--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,7 @@
         android:theme="@style/AppTheme"
         android:networkSecurityConfig="@xml/network_security_config">
         <activity
-            android:name="com.groceries.ui.activity.LoginActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.groceries.ui.activity.GroceriesActivity"
+                android:name="com.groceries.ui.activity.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,7 +21,6 @@
         </activity>
         <activity android:name=".ui.activity.CreateGroceryListActivity" />
         <activity android:name=".ui.activity.CreateGroceryListEntryActivity" />
-        <activity android:name=".ui.activity.RegistrationActivity" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
