--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
             android:roundIcon="@mipmap/ic_cart_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config">
+            android:name=".servicelocater.ServiceLocationInitializer"
+            android:networkSecurityConfig="@xml/network_security_config">
         <activity
                 android:name="com.groceries.ui.activity.MainActivity"
             android:label="@string/app_name">
