--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
             android:roundIcon="@mipmap/ic_cart_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-            android:name=".servicelocater.ServiceLocationInitializer"
+            android:name=".locator.ServiceLocationInitializer"
             android:networkSecurityConfig="@xml/network_security_config">
         <activity
                 android:name="com.groceries.ui.activity.MainActivity"
