--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
             android:roundIcon="@mipmap/ic_cart_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-            android:name=".locator.ServiceLocationInitializer"
+            android:name=".locator.ServiceLocatorInitializer"
             android:networkSecurityConfig="@xml/network_security_config">
         <activity
                 android:name="com.groceries.ui.activity.MainActivity"
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".ui.activity.CreateGroceryListActivity" />
         <activity android:name=".ui.activity.CreateGroceryListEntryActivity" />
+        <activity android:name=".ui.activity.CreateInvitationActivity" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
