--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.groceries"
+        applicationId "com.remembrall"
         minSdkVersion 28
         targetSdkVersion 29
         versionCode 1
