--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.groceries">
+        package="com.remembrall">
 
     <application
-        android:allowBackup="true"
+            android:allowBackup="true"
             android:icon="@mipmap/ic_cart_launcher"
-        android:label="@string/app_name"
+            android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_cart_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-            android:name=".locator.ServiceLocatorInitializer"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme"
+            android:name="com.remembrall.locator.ServiceLocatorInitializer"
             android:networkSecurityConfig="@xml/network_security_config">
         <activity
-                android:name="com.groceries.ui.activity.MainActivity"
-            android:label="@string/app_name">
+                android:name="com.remembrall.ui.activity.MainActivity"
+                android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.CreateGroceryListActivity" />
-        <activity android:name=".ui.activity.CreateGroceryListEntryActivity" />
-        <activity android:name=".ui.activity.CreateInvitationActivity" />
+        <activity android:name="com.remembrall.ui.activity.CreateGroceryListActivity" />
+        <activity android:name="com.remembrall.ui.activity.CreateGroceryListEntryActivity" />
+        <activity android:name="com.remembrall.ui.activity.CreateInvitationActivity" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
