--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
             android:name="com.remembrall.locator.ServiceLocatorInitializer"
             android:networkSecurityConfig="@xml/network_security_config">
         <activity
-                android:name="com.remembrall.ui.activity.MainActivity"
+                android:name="com.remembrall.ui.MainActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
