add intent filter to receive a 'click_action' and forward to invitations

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,11 @@
                 android:name="com.remembrall.ui.MainActivity"
                 android:label="@string/app_name">
             <intent-filter>
+                <action android:name="OPEN_INVITATIONS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
