--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
             android:networkSecurityConfig="@xml/network_security_config">
         <activity
                 android:name="com.remembrall.ui.MainActivity"
-                android:label="@string/app_name">
+                android:label="@string/app_name"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="OPEN_INVITATIONS" />
                 <category android:name="android.intent.category.DEFAULT" />
