--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
     }
     buildTypes {
         debug {
-            buildConfigField "String", "SERVER_URL", '"http://192.168.0.248:8080"'
+            buildConfigField "String", "SERVER_URL", '"https://remembrall.de"'
             manifestPlaceholders = [clearTextPermitted:"true"]
         }
         release {
